--- a/demo01.html
+++ b/demo01.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div>
-            <h4>Cat Gif of the day</h4>
+            <h4>Dog Gif of the day</h4>
             <img src="{{url}}" />
             <p>
                 <small>Courtesy: <a href="http://www.buzzfeed.com/copyranter/the-best-cat-gif-post-in-the-history-of-cat-gifs">Buzzfeed</a></small>
