--- a/demo01.html
+++ b/demo01.html
@@ -5,10 +5,9 @@
     </head>
     <body>
         <div>
-            <h4>Dog Gif of the day</h4>
-            <img src="{{url}}" />
+            <h2>Cat Gif of the day</h2>
             <p>
-                <small>Courtesy: <a href="http://www.buzzfeed.com/copyranter/the-best-cat-gif-post-in-the-history-of-cat-gifs">Buzzfeed</a></small>
+                <img src="https://media.tenor.com/zrpyKEyxZGwAAAAd/fat-cat-laser-eyes.gif" style="width: 100%; max-width: 100%; height: auto;">
             </p>
         </div>
     </body>
