--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div>
-            <h2>Cat Gif of the day</h2>
+            <h2>Dog Gif of the day</h2>
             <p>
                 <img src="https://media.tenor.com/zrpyKEyxZGwAAAAd/fat-cat-laser-eyes.gif" style="width: 100%; max-width: 100%; height: auto;">
             </p>
